--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -9,13 +9,13 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.hostmanager.ignore_private_ip = false
   config.hostmanager.include_offline = true
 
+# server-01
   config.vm.define "server-01" do |vmconfig|
     vmconfig.vm.hostname = "server-01"
     vmconfig.vm.box = "ubuntu/disco64"
     vmconfig.vm.provider :virtualbox do |vb|
       vb.customize ["modifyvm", :id, "--memory", "1024"]
       vb.customize ["modifyvm", :id, "--cpus", "1"]
-      # vb.customize ["modifyvm", :id, "--ioapic", "on"]
       vb.customize ["modifyvm", :id, "--cpuexecutioncap", "100"]
       vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
       vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
@@ -23,25 +23,22 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     end
 
     vmconfig.hostmanager.aliases = %w(server-01.local)
-    # vmconfig.vm.network :private_network, ip: '172.28.128.101'
-   vmconfig.vm.network :private_network, type: "dhcp"
-#    vmconfig.vm.network :public_network, type: "dhcp"
-    vmconfig.vm.network "forwarded_port", guest: 80, host: 8000
-#     Run Ansible from the Vagrant Host
+    vmconfig.vm.network :private_network, type: "dhcp"
+    vmconfig.vm.network "forwarded_port", guest: 80, host: 80
+#   Run Ansible from the Vagrant Host
     config.vm.provision "ansible_local" do |ansible|
       ansible.verbose = "v"
       ansible.playbook = "ansible/server-01.yml"
-      ansible.raw_arguments = ["--connection=paramiko"]
     end
   end
 
+# server-02  
   config.vm.define "server-02" do |vmconfig|
     vmconfig.vm.hostname = "server-02"
     vmconfig.vm.box = "ubuntu/disco64"
     vmconfig.vm.provider :virtualbox do |vb|
-      vb.customize ["modifyvm", :id, "--memory", "256"]
+      vb.customize ["modifyvm", :id, "--memory", "1024"]
       vb.customize ["modifyvm", :id, "--cpus", "1"]
-      # vb.customize ["modifyvm", :id, "--ioapic", "on"]
       vb.customize ["modifyvm", :id, "--cpuexecutioncap", "100"]
       vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
       vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
@@ -49,15 +46,14 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     end
 
     vmconfig.hostmanager.aliases = %w(server-02)
-    # vmconfig.vm.network :private_network, ip: '172.28.128.102'
-   vmconfig.vm.network :private_network, type: "dhcp"
-#    vmconfig.vm.network :public_network, type: "dhcp"
-    vmconfig.vm.network "forwarded_port", guest: 80, host: 8001
-#     Run Ansible from the Vagrant Host
+    vmconfig.vm.network :private_network, type: "dhcp"
+    vmconfig.vm.network "forwarded_port", guest: 3306, host: 3306
+#   Run Ansible from the Vagrant Host
     config.vm.provision "ansible_local" do |ansible|
-      ansible.verbose = "v"
+      # ansible.verbose = "v"
+      ansible.verbose = "-vvvv"
       ansible.playbook = "ansible/server-02.yml"
-      ansible.raw_arguments = ["--connection=paramiko"]
     end
   end
+  
 end
