--- a/vagrant/ansible/roles/nginx/tasks/install.yml
+++ b/vagrant/ansible/roles/nginx/tasks/install.yml
@@ -1,2 +1,9 @@
 - name: ensure nginx is at the latest version
-  apt: name=nginx state=latest
+  apt:
+   name: nginx
+   state: latest
+   
+- name: start nginx
+  service:
+    name: nginx
+    state: started
