--- a/vagrant/ansible/roles/nginx/tasks/main.yml
+++ b/vagrant/ansible/roles/nginx/tasks/main.yml
@@ -1,4 +1,2 @@
-- name: nginx
-  tasks:
-    - import_tasks: install.yml
-    - import_tasks: run.yml
+- name: Nginx install and run
+  import_tasks: install.yml
