--- a/vagrant/ansible/server-02.yml
+++ b/vagrant/ansible/server-02.yml
@@ -1,8 +1,4 @@
----
-# This playbook would deploy server-01.
-
 - hosts: all
-  user: vagrant
   become: yes
   roles:
-  - role: common
+    - role: mysql
